<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="15dp"
        android:text="@string/rate_app_title"/>

    <TextView
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvContent"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:text="@string/rate_app_content"/>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvNoRate"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:text="@string/no_thanks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/tvRateLater"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:text="@string/reminder_later"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/tvRateNow"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:text="@string/rate_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>